--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@
     width: 100%;
     text-align: center;
 }
-.botao_tabela input{
+.input{
     text-align: center;
     color: white;
     font-family: 'Forum';
