--- a/style.css
+++ b/style.css
@@ -386,6 +386,9 @@
     border-radius: 20px;
     width: 96%;
     padding: 0 2%;
+    color: #531300;
+    font-size: clamp(0.25rem, 2vw, 1rem);
+    font-family: 'convergence';
 }
 #segunda_metade{
     display: flex;
